# adventkit

./: .gitignore  LICENSE.txt  README.md  grids.py  helpers.py  parse.py  pyproject.toml  run.py  run.sh
advent2017/: d02_corruption_checksum.py
advent2019/: d01_rocket_equation.py  d03_crossed_wires.py  d05_chance_of_asteroids.py  d06_universal_orbit_map.py  d07_amplification_circuit.py  d09_sensor_boost.py  d10_monitoring_station.py
advent2020/: d02_password_philosophy.py  d03_toboggan_trajectory.py  d05_binary_boarding.py  d06_custom_customs.py  d08_handheld_halting.py  d10_adapter_array.py
packaging/: adventkit_backend.py
src/: helpers.py  run.py  run.sh
src/advent2017/: d01_inverse_captcha.py  d03_spiral_memory.py
src/advent2019/: d03_crossed_wires.py  d04_secure_container.py  d11_space_police.py
src/advent2020/: __init__.py  d09_encoding_error.py
src/adventkit/: __init__.py  _version.py  grids.py  parse.py  solve.py
src/adventkit/year2017/: d02_corruption_checksum.py  d04_passphrases.py  day01_inverse_captcha.py  day02_corruption_checksum.py  day03_spiral_memory.py  day04_passphrases.py
src/adventkit/year2019/: d02_1202_program_alarm.py  d03_crossed_wires.py  d07_amplification_circuit.py  d08_space_image_format.py  d09_sensor_boost.py  d10_monitoring_station.py  d11_space_police.py  day01_rocket_equation.py  day02_1202_program_alarm.py  day03_crossed_wires.py  day04_secure_container.py  day05_chance_of_asteroids.py  day06_universal_orbit_map.py  day07_amplification_circuit.py  day08_space_image_format.py  day09_sensor_boost.py  day10_monitoring_station.py  day11_space_police.py
src/adventkit/year2020/: d01_report_repair.py  d02_password_philosophy.py  d03_toboggan_trajectory.py  d08_handheld_halting.py  d09_encoding_error.py  d11_seating_system.py  d12_rain_risk.py  day01_report_repair.py  day02_password_philosophy.py  day03_toboggan_trajectory.py  day04_passport_processing.py  day05_binary_boarding.py  day06_custom_customs.py  day07_handy_haversacks.py  day08_handheld_halting.py  day09_encoding_error.py  day10_adapter_array.py  day11_seating_system.py  day12_rain_risk.py
src/year2017/: __init__.py
src/year2019/: __init__.py  d07_amplification_circuit.py  d09_sensor_boost.py
src/year2020/: d01_report_repair.py  d07_handy_haversacks.py
tests/: test_solvers.py
tests/year2017/: day01_inverse_captcha.txt  day02_corruption_checksum.md  day02_corruption_checksum.txt  day03_spiral_memory.md  day03_spiral_memory.txt  day04_passphrases.md
(+10 files in other folders)
