[build-system]
requires = [
    # Starting from version 3.8.0, cached Python bytecode files are excluded
    # from source distributions.
    "flit_core >= 3.8.0",

    # Version 6.4.2 works on Python 3.6+.
    "setuptools_scm >= 6.4.2",
]
build-backend = "adventkit_backend"
backend-path = ["packaging"]

[project]
name = "adventkit"
readme = "README.md"
requires-python = ">= 3.6.1"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Lukas Gelbmann", email = "me@lukasgelbmann.com"},
]
maintainers = [
    {name = "Lukas Gelbmann", email = "me@lukasgelbmann.com"},
]
keywords = [
    "Advent of Code",
    "puzzles",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/LukasGelbmann/adventkit"

[project.scripts]
adventkit = "adventkit.solve:main"

[tool.flit.sdist]
include = [
    # Use wildcards to avoid matching files and folders starting with a dot.
    "packaging/**/*.*",
    "tests/**/*.*",
]
